Nuevos archivos + empezado pagina sobre mi

--- a/PUBLIC/sobre_mi.html
+++ b/PUBLIC/sobre_mi.html
@@ -28,6 +28,94 @@
             </div>
         </div>
     </header>
+
+
+    <main>
+        <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
+            <div class="container text-center  pt-5">
+
+
+                <div class="row"> <!--Primera parte de la pagina-->
+                    <div class="container-md pt-5">
+                        <h1>Sobre mi</h1>
+                        <p class="lead">En esta pagina podras encontrar un poco mas de informacion sobre mi.</p>
+                        <p>Podras encontrar tambien alguna foto y mi curriculum jeje.</p>
+                        <p class="lead">
+                            <a href="#" class="btn btn-lg btn-light fw-bold border-white bg-white">Dar un vistazo</a>
+                        </p>
+                    </div>
+                </div>
+
+                <!--Separacion entre las partes de la pagina-->
+                <div class="row my-5"></div>
+
+                <div class="row"> <!--Segunda parte de la pagina-->
+                    <div class="col col-sm-2"></div>
+                    <div class="col "><!--CURRICULUM VITAE-->
+                        <div class="card shadow-sm">
+                            <img src="IMG/CV2.png" class="rounded mx-auto d-block bd-placeholder-img card-img-top"
+                                alt="Curriculum">
+                            <div class="card-body">
+                                <p class="card-text">Aqui puedes observar una vista previa de mi Curriculum, mas abajo
+                                    podras descargarlo.</p>
+                                <div class="d-flex justify-content-between align-items-center">
+                                    <a type="button" class="btn btn-outline-secondary"
+                                        href="IMG/CV - Dario Rodriguez.pdf" target="_blank">Descargar</a>
+                                    <small class="text-body-secondary">actualizado el 27/11/23</small>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col col-sm-2 "></div> <!--Separacion de los margenes-->
+
+                </div>
+
+
+
+                <!--Separacion entre las partes de la pagina-->
+                <div class="row my-5"></div>
+
+
+                <div class="row">
+                    <div class="row"> <!--Primera parte de la pagina-->
+                        <div class="container-md pt-5">
+                            <h1>Mas sobre mi</h1>
+                            <p class="lead">En esta parte podras ver alguna foto mia</p>
+                        </div>
+                    </div>
+
+                    <div class="col mt-3"><!--Primera imagen-->
+                        <div class="card shadow-sm">
+                            <img src="IMG/FOTO.jpg" class="rounded mx-auto d-block bd-placeholder-img card-img-top"
+                                alt="Curriculum">
+                            <div class="card-body">
+                                <p class="card-text">Aqui salgo con algunos amigos en un festival este verano</p>
+                                <!-- <div class="d-flex justify-content-between align-items-center">
+                                <a type="button" class="btn btn-outline-secondary" href="IMG/CV - Dario Rodriguez.pdf"
+                                    target="_blank">Descargar</a>
+                                <small class="text-body-secondary">actualizado el 27/11/23</small>
+                            </div> -->
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col mt-3"><!--Primera imagen-->
+                        <div class="card shadow-sm">
+                            <img src="IMG/FOTO2.jpg" class="rounded mx-auto d-block bd-placeholder-img card-img-top"
+                                alt="Curriculum">
+                            <div class="card-body">
+                                <p class="card-text">Aqui estoy en el dia de mi graduacion de la FP de DAM</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+
+            </div>
+        </div>
+    </main>
+
+
+
 </body>
 
 </html>
