--- a/PUBLIC/pagina_FII.html
+++ b/PUBLIC/pagina_FII.html
@@ -28,6 +28,129 @@
             </div>
         </div>
     </header>
+
+    <main>
+        <div class="b-example-divider"></div> <!--Separador entre bloques-->
+
+        <div class="px-4 py-5 text-center"><!--Separador Parte 1-->
+            <div class="py-5">
+                <h1 class="display-5 fw-bold">PARTE 1</h1>
+                <div class="col-lg-6 mx-auto">
+                    <p class="fs-5 mb-4">Apartir de aqui podremos ver los temas de la primera parte de la asignatura
+                        Fundamentos de la ingenieria informatica</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="container px-4"> <!--Contenedor del Primer bloque-->
+            <h2 class="pb-2 border-bottom">Bloque I</h2>
+            <div class="row g-4 py-5 row-cols-1 row-cols-lg-3">
+                <div class="feature col">
+                    <div class="feature-icon d-inline-flex align-items-center justify-content-center fs-2 mb-3">
+                        <i class="bi bi-1-square"></i>
+                    </div>
+                    <h3 class="fs-2 text-body-emphasis">Unidad 1</h3>
+                    <p>Antecedentes y perspectivas historicas</p>
+                </div>
+                <div class="feature col">
+                    <div class="feature-icon d-inline-flex align-items-center justify-content-center fs-2 mb-3">
+                        <i class="bi bi-2-square"></i>
+                    </div>
+                    <h3 class="fs-2 text-body-emphasis">Unidad 2</h3>
+                    <p>El contexto actual de la Informatica</p>
+                </div>
+                <div class="feature col">
+                    <div class="feature-icon d-inline-flex align-items-center justify-content-center fs-2 mb-3">
+                        <i class="bi bi-3-square"></i>
+                    </div>
+                    <h3 class="fs-2 text-body-emphasis">Unidad 3</h3>
+                    <p>La ingenieria como profesion</p>
+                    <a href="#" class="icon-link">
+                        Call to action
+                        <svg class="bi">
+                            <use xlink:href="#chevron-right"></use>
+                        </svg>
+                    </a>
+                </div>
+            </div>
+        </div>
+
+        <div class="b-example-divider"></div> <!--Separador entre bloques-->
+
+        <div class="container px-4 py-5"> <!--Contenedor del Segundo bloque-->
+            <h2 class="pb-2 border-bottom">Bloque II</h2>
+            <div class="row g-4 py-5 row-cols-1 row-cols-lg-3">
+                <div class="feature col">
+                    <div class="feature-icon d-inline-flex align-items-center justify-content-center fs-2 mb-3">
+                        <i class="bi bi-4-square"></i>
+                    </div>
+                    <h3 class="fs-2 text-body-emphasis">Unidad 4</h3>
+                    <p>El Software</p>
+                </div>
+                <div class="feature col">
+                    <div class="feature-icon d-inline-flex align-items-center justify-content-center fs-2 mb-3">
+                        <i class="bi bi-5-square"></i>
+                    </div>
+                    <h3 class="fs-2 text-body-emphasis">Unidad 5</h3>
+                    <p>Hardware</p>
+                </div>
+                <div class="feature col">
+                    <div class="feature-icon d-inline-flex align-items-center justify-content-center fs-2 mb-3">
+                        <i class="bi bi-6-square"></i>
+                    </div>
+                    <h3 class="fs-2 text-body-emphasis">Unidad 6</h3>
+                    <p>Sistemas operativos</p>
+                    <a href="#" class="icon-link">
+                        Call to action
+                        <svg class="bi">
+                            <use xlink:href="#chevron-right"></use>
+                        </svg>
+                    </a>
+                </div>
+                <div class="feature col">
+                    <div class="feature-icon d-inline-flex align-items-center justify-content-center fs-2 mb-3">
+                        <i class="bi bi-7-square"></i>
+                    </div>
+                    <h3 class="fs-2 text-body-emphasis">Unidad 7</h3>
+                    <p>Redes</p>
+                </div>
+                <div class="feature col">
+                    <div class="feature-icon d-inline-flex align-items-center justify-content-center fs-2 mb-3">
+                        <i class="bi bi-8-square"></i>
+                    </div>
+                    <h3 class="fs-2 text-body-emphasis">Unidad 8</h3>
+                    <p>Nuevas tendencias I & II</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="b-example-divider"></div> <!--Separador entre bloques-->
+
+        <div class="container px-4 py-5"> <!--Contenedor del Tercer bloque-->
+            <h2 class="pb-2 border-bottom">Bloque III</h2>
+            <div class="row g-4 py-5 row-cols-1 row-cols-lg-3">
+                <div class="feature col">
+                    <div class="feature-icon d-inline-flex align-items-center justify-content-center fs-2 mb-3">
+                        <i class="bi bi-9-square"></i>
+                    </div>
+                    <h3 class="fs-2 text-body-emphasis">Unidad 9</h3>
+                    <p>Antecedentes y perspectivas historicas</p>
+                </div>
+                <div class="feature col">
+                    <div class="feature-icon d-inline-flex align-items-center justify-content-center fs-2 mb-3">
+                        <i class="bi bi-1-square"></i><i class="bi bi-0-square"></i>
+                    </div>
+                    <h3 class="fs-2 text-body-emphasis">Unidad 10</h3>
+                    <p>El contexto actual de la Informatica</p>
+                </div>
+            </div>
+        </div>
+
+
+
+    </main>
+
+
 </body>
 
 </html>
