--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="es">
 
 <head>
+    
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mi pagina web</title>
@@ -37,7 +38,7 @@
               <p class="lead mb-4">Pagina creada por Dario Rodriguez Pajares<br>Tienes a tu disposicion un menu arriba de la pagina para poder navegar por mi sitio web</p>
               <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
                 <button type="button" onclick="location.href='PUBLIC/pagina_de_contacto.html'" class="btn btn-primary btn-lg px-4 gap-3">Contactactame</button>
-                <button type="button" class="btn btn-outline-secondary btn-lg px-4">Sobre mi</button>
+                <button type="button" onclick="location.href='PUBLIC/sobre_mi.html'" class="btn btn-outline-secondary btn-lg px-4">Sobre mi</button>
               </div>
             </div>
           </div>
