Terminado(o eso creo) sobre_mi.html y editado paginaFII

--- a/PUBLIC/pagina_FII.html
+++ b/PUBLIC/pagina_FII.html
@@ -30,7 +30,18 @@
     </header>
 
     <main>
-        <div class="b-example-divider"></div> <!--Separador entre bloques-->
+
+
+        <div class="px-4 py-5 my-5 text-center">
+            <h1 class="display-5 fw-bold text-body-emphasis">FUNDAMENTOS DE INGENIERIA INFORMATICA</h1>
+            <div class="col-lg-6 mx-auto">
+              <p class="lead mb-4">Aqui encontratemos los temas que se tratan en la asignatura FII</p>
+              <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
+                <button type="button" class="btn btn-primary btn-lg px-4 gap-3">Parte 1</button>
+                <button type="button" class="btn btn-outline-secondary btn-lg px-4">Parte 2</button>
+              </div>
+            </div>
+          </div>
 
         <div class="px-4 py-5 text-center"><!--Separador Parte 1-->
             <div class="py-5">
@@ -38,7 +49,17 @@
                 <div class="col-lg-6 mx-auto">
                     <p class="fs-5 mb-4">Apartir de aqui podremos ver los temas de la primera parte de la asignatura
                         Fundamentos de la ingenieria informatica</p>
+                    <p class="lead">
+                        <a href="#B1" class="btn btn-lg btn-light fw-bold border-white bg-secondary">Bloque I</a>
+                        <a href="#B2" class="btn btn-lg btn-light fw-bold border-white bg-secondary">Bloque II</a>
+                        <a href="#B3" class="btn btn-lg btn-light fw-bold border-white bg-secondary">Bloque III</a>
+                        <a href="#B4" class="btn btn-lg btn-light fw-bold border-white bg-secondary">Bloque IV</a>
+                        <a href="#B5" class="btn btn-lg btn-light fw-bold border-white bg-secondary">Bloque V</a>
+                        <a href="#B6" class="btn btn-lg btn-light fw-bold border-white bg-secondary">Bloque VI</a>
+
+                    </p>
                 </div>
+
             </div>
         </div>
 
@@ -142,6 +163,80 @@
                     </div>
                     <h3 class="fs-2 text-body-emphasis">Unidad 10</h3>
                     <p>El contexto actual de la Informatica</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="px-4 py-5 text-center"><!--Separador Parte 2-->
+            <div class="py-5">
+                <h1 class="display-5 fw-bold">PARTE 2</h1>
+                <div class="col-lg-6 mx-auto">
+                    <p class="fs-5 mb-4">Apartir de aqui podremos ver los temas de la segunda parte de la asignatura
+                        Fundamentos de la ingenieria informatica</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="container px-4"> <!--Contenedor del cuarto bloque-->
+            <h2 class="pb-2 border-bottom">Bloque IV</h2>
+            <div class="row g-4 py-5 row-cols-1 row-cols-lg-3">
+                <div class="feature col">
+                    <div class="feature-icon d-inline-flex align-items-center justify-content-center fs-2 mb-3">
+                        <i class="bi bi-1-square"></i>
+                    </div>
+                    <h3 class="fs-2 text-body-emphasis">Unidad 1</h3>
+                    <p>Introducción al desarrollo de software</p>
+                </div>
+                <div class="feature col">
+                    <div class="feature-icon d-inline-flex align-items-center justify-content-center fs-2 mb-3">
+                        <i class="bi bi-2-square"></i>
+                    </div>
+                    <h3 class="fs-2 text-body-emphasis">Unidad 2</h3>
+                    <p>Herramienras de desarrollo</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="b-example-divider"></div> <!--Separador entre bloques-->
+
+        <div class="container px-4 py-5"> <!--Contenedor del quinto bloque-->
+            <h2 class="pb-2 border-bottom">Bloque V</h2>
+            <div class="row g-4 py-5 row-cols-1 row-cols-lg-3">
+                <div class="feature col">
+                    <div class="feature-icon d-inline-flex align-items-center justify-content-center fs-2 mb-3">
+                        <i class="bi bi-1-square"></i>
+                    </div>
+                    <h3 class="fs-2 text-body-emphasis">Unidad 1</h3>
+                    <p>Introduccion al desarrollo web</p>
+                </div>
+                <div class="feature col">
+                    <div class="feature-icon d-inline-flex align-items-center justify-content-center fs-2 mb-3">
+                        <i class="bi bi-2-square"></i>
+                    </div>
+                    <h3 class="fs-2 text-body-emphasis">Unidad 2</h3>
+                    <p>HTML</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="b-example-divider"></div> <!--Separador entre bloques-->
+
+        <div class="container px-4 py-5"> <!--Contenedor del sexto bloque-->
+            <h2 class="pb-2 border-bottom">Bloque VI</h2>
+            <div class="row g-4 py-5 row-cols-1 row-cols-lg-3">
+                <div class="feature col">
+                    <div class="feature-icon d-inline-flex align-items-center justify-content-center fs-2 mb-3">
+                        <i class="bi bi-1-square"></i>
+                    </div>
+                    <h3 class="fs-2 text-body-emphasis">Unidad 1</h3>
+                    <p>CSS I</p>
+                </div>
+                <div class="feature col">
+                    <div class="feature-icon d-inline-flex align-items-center justify-content-center fs-2 mb-3">
+                        <i class="bi bi-2-square"></i>
+                    </div>
+                    <h3 class="fs-2 text-body-emphasis">Unidad 2</h3>
+                    <p>CSS II</p>
                 </div>
             </div>
         </div>
