--- a/PUBLIC/sobre_mi.html
+++ b/PUBLIC/sobre_mi.html
@@ -41,7 +41,7 @@
                         <p class="lead">En esta pagina podras encontrar un poco mas de informacion sobre mi.</p>
                         <p>Podras encontrar tambien alguna foto y mi curriculum jeje.</p>
                         <p class="lead">
-                            <a href="#" class="btn btn-lg btn-light fw-bold border-white bg-white">Dar un vistazo</a>
+                            <a href="#CV" class="btn btn-lg btn-light fw-bold border-white bg-white">Dar un vistazo</a>
                         </p>
                     </div>
                 </div>
@@ -49,7 +49,7 @@
                 <!--Separacion entre las partes de la pagina-->
                 <div class="row my-5"></div>
 
-                <div class="row"> <!--Segunda parte de la pagina-->
+                <div class="row" id="CV"> <!--Segunda parte de la pagina-->
                     <div class="col col-sm-2"></div>
                     <div class="col "><!--CURRICULUM VITAE-->
                         <div class="card shadow-sm">
@@ -109,6 +109,51 @@
                     </div>
                 </div>
 
+
+                <div class="container px-4 py-5" id="hanging-icons">
+                    <div>
+                        <h2>REDES SOCIALES</h2>
+                        <p class="pb-2 border-bottom">Aqui dejo algunas redes sociales</p>
+                    </div>
+                    <div class="row g-4 py-5 row-cols-1 row-cols-lg-3">
+                        <div class="col d-flex align-items-start">
+                            <div
+                                class="text-body-emphasis d-inline-flex align-items-center justify-content-center fs-4 flex-shrink-0 m-3">
+                                <i class="bi bi-instagram"></i>
+                            </div>
+                            <div>
+                                <h3 class="fs-2 text-body-emphasis mb-5">Instagram</h3>
+                                <a href="https://www.instagram.com/" class="btn btn-primary"  target="_blank">
+                                    Acceso a Instagram
+                                </a>
+                            </div>
+                        </div>
+                        <div class="col d-flex align-items-start">
+                            <div
+                                class="text-body-emphasis d-inline-flex align-items-center justify-content-center fs-4 flex-shrink-0 m-3">
+                                <i class="bi bi-tiktok"></i>
+                            </div>
+                            <div>
+                                <h3 class="fs-2 text-body-emphasis mb-5">TikTok</h3>
+                                <a href="https://www.tiktok.com/" class="btn btn-primary"  target="_blank">
+                                    Acceso a TikTok
+                                </a>
+                            </div>
+                        </div>
+                        <div class="col d-flex align-items-start">
+                            <div
+                                class="text-body-emphasis d-inline-flex align-items-center justify-content-center fs-4 flex-shrink-0 m-3">
+                                <i class="bi bi-twitter-x"></i>
+                            </div>
+                            <div>
+                                <h3 class="fs-2 text-body-emphasis mb-5">Tweeter</h3>
+                                <a href="https://twitter.com/home?lang=es" class="btn btn-primary" target="_blank">
+                                    Acceso a Tweeter
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
 
             </div>
         </div>
