Terminada pagina FII y detalle de FII, añadido foto y pdf tema 3

--- a/PUBLIC/detalle_de_FII.html
+++ b/PUBLIC/detalle_de_FII.html
@@ -28,6 +28,42 @@
             </div>
         </div>
     </header>
+
+
+    <main>
+
+        <div class="row py-lg-5">
+            <div class="col-lg-6 col-md-8 mx-auto">
+                <h1 class="fw-light">UNIDAD 3</h1>
+                <p class="lead text-body-secondary">en esta pagina podras encontrar el tema de la unidad 3, tienes una vista previa del documento y aparte un boton que te dejara descargar la presentacion en pdf</p>
+            </div>
+        </div>
+
+        <div class="row" id="CV">
+            <div class="col col-sm-2"></div>
+            <div class="col "><!--Unidad 3-->
+                <div class="card shadow-sm">
+                    <img src="IMG/Unidad_3.png" class="rounded mx-auto d-block bd-placeholder-img card-img-top"
+                        alt="Unidad_3" width="100px">
+                    <div class="card-body">
+                        <p class="card-text">Aqui puedes observar una vista previa del tema de la unidad 3, mas abajo
+                            podras descargarlo.</p>
+                        <div class="d-flex justify-content-between align-items-center">
+                            <a type="button" class="btn btn-outline-secondary"
+                                href="IMG/Unidad_3.pdf" target="_blank">Descargar</a>
+                            <small class="text-body-secondary">actualizado el 15/12/23</small>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col col-sm-2 "></div> <!-- Separacion de los margenes -->
+
+        </div>
+
+    </main>
+
+
+
 </body>
 
 </html>
