--- a/PUBLIC/pagina_FII.html
+++ b/PUBLIC/pagina_FII.html
@@ -101,11 +101,8 @@
                     </div>
                     <h3 class="fs-2 text-body-emphasis">Unidad 3</h3>
                     <p>La ingenieria como profesion</p>
-                    <a href="#" class="icon-link">
-                        Call to action
-                        <svg class="bi">
-                            <use xlink:href="#chevron-right"></use>
-                        </svg>
+                    <a href="detalle_de_FII.html" class="icon-link">
+                        Ir a descargar la presentación<i class="bi bi-arrow-return-right"></i>
                     </a>
                 </div>
             </div>
@@ -136,12 +133,6 @@
                     </div>
                     <h3 class="fs-2 text-body-emphasis">Unidad 6</h3>
                     <p>Sistemas operativos</p>
-                    <a href="#" class="icon-link">
-                        Call to action
-                        <svg class="bi">
-                            <use xlink:href="#chevron-right"></use>
-                        </svg>
-                    </a>
                 </div>
                 <div class="feature col">
                     <div class="feature-icon d-inline-flex align-items-center justify-content-center fs-2 mb-3">
