terminada pagina de redes

--- a/PUBLIC/pagina_red.html
+++ b/PUBLIC/pagina_red.html
@@ -51,10 +51,10 @@
                         <i class="bi bi-browser-chrome"></i>
                     </div>
                     <div> <!-- Pagina 1 -->
-                        <h3 class="fs-2 text-body-emphasis">Pagina de Eustaqui</h3>
-                        <p>Desde el siguiente boton podras acceder a la pagina de Eustaqui</p>
-                        <a href="#" class="btn btn-primary">
-                            Acceso a Esutaqui
+                        <h3 class="fs-2 text-body-emphasis">Pagina de Maria</h3>
+                        <p>Desde el siguiente boton podras acceder a la pagina de Maria</p>
+                        <a href="https://mariaafazio.github.io/fundamentalsufv.github.io/" class="btn btn-primary">
+                            Acceso a Maria
                         </a>
                     </div>
                 </div>
@@ -65,10 +65,10 @@
                         
                     </div>
                     <div> <!-- Pagina 2 -->
-                        <h3 class="fs-2 text-body-emphasis">Pagina de Eustaqui</h3>
-                        <p>Desde el siguiente boton podras acceder a la pagina de Eustaqui</p>
-                        <a href="#" class="btn btn-primary">
-                            Acceso a Esutaqui
+                        <h3 class="fs-2 text-body-emphasis">Pagina de Paula</h3>
+                        <p>Desde el siguiente boton podras acceder a la pagina de Paula</p>
+                        <a href="https://paulagove.github.io/Paginaweb/" class="btn btn-primary">
+                            Acceso a Paula
                         </a>
                     </div>
                 </div>
@@ -78,10 +78,10 @@
                         <i class="bi bi-browser-chrome"></i>
                     </div>
                     <div> <!-- Pagina 3 -->
-                        <h3 class="fs-2 text-body-emphasis">Pagina de Eustaqui</h3>
-                        <p>Desde el siguiente boton podras acceder a la pagina de Eustaqui</p>
-                        <a href="#" class="btn btn-primary">
-                            Acceso a Esutaqui
+                        <h3 class="fs-2 text-body-emphasis">Pagina de Ana</h3>
+                        <p>Desde el siguiente boton podras acceder a la pagina de Ana</p>
+                        <a href="https://anadelamata28.github.io/sitioweb/" class="btn btn-primary">
+                            Acceso a Ana
                         </a>
                     </div>
                 </div>
