terminado pagina del tema

--- a/PUBLIC/tema_de_la_pagina.html
+++ b/PUBLIC/tema_de_la_pagina.html
@@ -31,13 +31,26 @@
 
     <main>
         <div class="px-4 py-5 my-5 text-center">
-            <!-- <img class="d-block mx-auto mb-4" src="/docs/5.3/assets/brand/bootstrap-logo.svg" alt="" width="72" height="57"> -->
-            <h1 class="display-5 fw-bold text-body-emphasis">Coches</h1>
+            <h1 class="display-5 fw-bold text-body-emphasis">Steam Deck</h1>
             <div class="col-lg-6 mx-auto">
-              <p class="lead mb-4">En esta pagina contaremos informacion relevante del mundo del motor</p>
+              <p class="lead mb-4">En esta pagina contaremos informacion relevante sobre la Steam Deck</p>
+              <p class="lead mb-4">La steam deck es una consola portatil de Valve la cual cuenta con un sistema operativo desarroyado por steam basado en el kernel de linux</p>
               <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
-                <!-- <button type="button" class="btn btn-primary btn-lg px-4 gap-3">Primary button</button>
-                <button type="button" class="btn btn-outline-secondary btn-lg px-4">Secondary</button> -->
+              </div>
+            </div>
+          </div>
+
+          <div class="row flex-lg-row-reverse align-items-center">
+            <div class="col col-sm-6 col-lg-5">
+              <img src="IMG/steamdeck.png" class="d-block mx-lg-auto img-fluid" alt="Bootstrap Themes" width="600" height="400" loading="lazy">
+            </div>
+            <div class="col-lg-6">
+              <h1 class="display-5 fw-bold text-body-emphasis lh-1 mb-3">Algo mas sobre SteamDeck</h1>
+              <p class="lead">Esta es la steam deck</p>
+              <p class="lead">la steam deck al fin y al cabo es un ordenador con una pantalla integrada y un sistema especializado para jugar. Juntas todo lo bueno del ordenador con la comodidad de los controles de una consola</p>
+              <p class="lead">Mas abajo encontraras un enlze a la pagina web de la steam deck</p>
+              <div class="d-grid gap-2 d-md-flex justify-content-md-start">
+                <button type="button" onclick="location.href='https://store.steampowered.com/steamdeck'" class="btn btn-primary btn-lg px-4 me-md-2">Steam</button>
               </div>
             </div>
           </div>
