Errores ortograficos y readme actualizados

--- a/PUBLIC/tema_de_la_pagina.html
+++ b/PUBLIC/tema_de_la_pagina.html
@@ -34,7 +34,7 @@
             <h1 class="display-5 fw-bold text-body-emphasis">Steam Deck</h1>
             <div class="col-lg-6 mx-auto">
               <p class="lead mb-4">En esta pagina contaremos informacion relevante sobre la Steam Deck</p>
-              <p class="lead mb-4">La steam deck es una consola portatil de Valve la cual cuenta con un sistema operativo desarroyado por steam basado en el kernel de linux</p>
+              <p class="lead mb-4">La steam deck es una consola portatil de Valve la cual cuenta con un sistema operativo desarrollado por steam basado en el kernel de linux</p>
               <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
               </div>
             </div>
